--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <li><a href="#More">More</a></li>
    <li>
     
-    <button class="btn btn-default target" id="target1">
-    <img class="img-responsive" style="margin-top: 0px" src="starks.png" width="150" height="8" alt="home logo"></button>
+   
+    <img class="img-responsive" style="margin-top: 0px" src="starks.png" width="150" height="8" alt="home logo">
  
     </li>
   </div>
@@ -141,15 +141,6 @@
      </div>
     </div>
 
-    <!--Stannis-->
-    <div class="responsive">
-    <div class="gallery">
-    <a target="_blank" href="">
-      <img src="Stannis.png" alt="Tyrion" width="300" height="200">
-    </a>
-    <div class="desc"><b>Stannis</b><br>A witty, humorous character who fights his enemies with words rather than with swords.</div>
-     </div>
-    </div> 
 
 
     <hr width=100%>
