--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@
 </div><!--Meme-->
     
 
-<div id="Game">
-  <h1 class="text-center">Game</h1>
-  <p class="text-center">Play</p>
+<div class="text-center" id="Game">
+  <h1 >Game</h1>
+  <p>Download & Play (18mb)</p>
+  <a target="_blank" href="https://www.dropbox.com/sh/d0yyocdxvlw9tqu/AAAnRvSi4oghXrPx-s-FxrfWa?dl=0"> https://www.dropbox.com/sh/d0yyocdxvlw9tqu/AAAnRvSi4oghXrPx-s-FxrfWa?dl=0</a>
+
 </div>
  <hr width=100%>
 
