--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     
 
 <div class="text-center" id="Game">
-  <h1 >Game</h1>
-  <p>Download & Play (18mb)</p>
-  <a target="_blank" href="https://www.dropbox.com/sh/d0yyocdxvlw9tqu/AAAnRvSi4oghXrPx-s-FxrfWa?dl=0"> https://www.dropbox.com/sh/d0yyocdxvlw9tqu/AAAnRvSi4oghXrPx-s-FxrfWa?dl=0</a>
+  <h1 >2D Sidescroller Game</h1>
+  <p>Download to Play (18mb)</p>
+  <a target="_blank" href="https://www.dropbox.com/sh/d0yyocdxvlw9tqu/AAAnRvSi4oghXrPx-s-FxrfWa?dl=0">Click me!</a>
 
 </div>
  <hr width=100%>
