--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div style="padding-top:40px"></div>
 <div id="Home">
-  <h1 class="text-center">Whataaaaaaaaaaaaa is Game of Thrones?</h1>
+  <h1 class="text-center">What is Game of Thrones?</h1>
   <p class="text-center ">A Quick Guide to Game of Thrones</p>
   <hr width=100%>
 </div>
